Fix first profile being highlighted when the avatar button is clicked.

When the avatar button is activated using the keyboard the first profile
should be highlighted. But the new Refresh avatar button was using a
code path that always indicated the keyboard was used.

As a short-term fix, this patch avoids that code path entirely.

Bug: 849810
Change-Id: I87c32cf76870d92911f227afd74a9dd1e201a4b2
Reviewed-on: https://chromium-review.googlesource.com/1119385
Reviewed-by: Peter Boström <pbos@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571333}
Former-commit-id: ffb81aba54c5995acfc4c9ed2357fdd248506845